--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,4 @@
 <resources>
     <string name="app_name">H5GameCenter</string>
-    <string name="game_exit_warn">Press again to quit game</string>
-    <string name="game_center_exit_warn">Press again to quit game center</string>
+    <string name="exit_warn">Press again to quit</string>
 </resources>
