更换链接，更换图标

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">WebviewNews</string>
+    <string name="app_name">Magazine V</string>
     <string name="exit_warn">Press again to quit</string>
 </resources>
