--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">新闻流</string>
+    <string name="app_name">Magazine V</string>
     <string name="exit_warn">再按一次退出</string>
 </resources>
